<resources>
    <string name="app_name">IMEI Info (PY)</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_editar_perfil">EditarPerfil</string>
    <string name="title_activity_sign_out">SignOut</string>
    <string name="title_activity_actividad">ActividadActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_conatel_p">ConatelP</string>
    <string name="text_button_createregistro">Registrar Imei</string>


    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="prompt_password">prompt_password</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_ejemplo">Ejemplo</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="title_activity_main_perfil">MainPerfil</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_action">ActionActivity</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="operadora">Operadora</string>
    <string name="imei">IMEI</string>
    <string name="title_activity_registro_imei">Registro_imei</string>
    <string name="title_activity_dispositivos">Dispositivos</string>


</resources>
